--- a/Project Approach/APPROACH 2.ipynb
+++ b/Project Approach/APPROACH 2.ipynb
@@ -25,29 +25,13 @@
       "name": "python"
     },
     "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "515a688174fd4f80839b1f8e4a943f42": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_02efe99824b343a5a37e42728c4fe87d",
-              "IPY_MODEL_52a3d8ac3b644bd98b4b1434869d6db0",
-              "IPY_MODEL_d0192b83c20943a3a7c3141b5d13d2a0"
-            ],
-            "layout": "IPY_MODEL_3d4de8bfd76246729d2b2be7e606a11a"
-          }
-        },
+  "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+  }
+},
+
         "02efe99824b343a5a37e42728c4fe87d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
